--- a/vals4.html
+++ b/vals4.html
@@ -90,7 +90,7 @@ body::before{
 
 <div class="messageBox">
 <h1>HEY VALSTIE ❤️🔥</h1>
-<p> At your disposal valstie💋... what's on your mind big Daddy 🤤 </p>
+<p> At your disposal💋... what's on your mind babygirl? </p>
 </div>
 
 
@@ -146,6 +146,7 @@ window.location.href="https://wa.me/233507286324?text=Babygirl%20just%20tell%20m
 
 </body>
 </html>
+
 
 
 
