--- a/vals2.html
+++ b/vals2.html
@@ -15,7 +15,7 @@ border:none;
 <body>
 
 <audio id="bgMusic" autoplay loop>
-<source src="sika.mp3" type="audio/mpeg">
+<source src="33 - Shania Twain - You're Still The One.flac" type="audio/flac">
 </audio>
 
 <iframe id="frame" src="index.html"></iframe>
@@ -46,3 +46,4 @@ function handleYes(){
 
 </body>
 </html>
+
